# python-project-52

./: .env  .gitignore  Dockerfile  Makefile  README.md  build.sh  db.sqlite3  docker-compose.yml  makefile  pyproject.toml  requirements.txt
labels/: forms.py  views.py
labels/templates/: label_form.html  label_list.html
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/: status_form.html  status_list.html
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task_manager/: settings.py  views.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  home.html  login.html  user_form.html  user_list.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0002_task_description_task_tags.py  0003_remove_task_tags_task_tags.py  0004_alter_task_creator.py  0006_alter_task_status.py  0007_alter_task_tags.py  0008_alter_task_creator_alter_task_status.py  0011_rename_assignee_task_executor.py
tasks/templates/: task_detail.html  task_form.html  task_list.html
tests/: test_users.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/templates/: login.html  user_form.html  user_list.html
(+25 files in other folders)
